# jenkins-build-parser

./: README.md  parse_jenkins_builds.py  pyproject.toml  requirements.txt
